tests/spirits/errors/duplicate_uses.dol
// Test: Duplicate uses statements
// Expected: Should warn or error on duplicate imports

use container
use container
use container.state
use container.state

pub gen DuplicateImports {
    has data: string
}

docs {
    Test case for duplicate uses statements.
    Duplicates should be detected and reported.
}
